--- a/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
+++ b/src/app/AdminPanel/pages/category-master/category-list/category-list.component.html
@@ -1,11 +1,83 @@
+<!-- *********************************************** Insert-Update **********************************************  -->
+<div *ngIf="IsAddEdit">
+  <div><div class='alert alert-danger'><span>All * fields are mandatory</span></div></div>
+  <form >
+    <div>
+      <div class="form-group row">
 
+        <label class="col-sm-2 col-form-label">Root Category<span class="warningclass">*</span></label>
+        <div class="col-sm-4">
+          <ng-select [ngClass] ="(categoryObj.RCatg_ID == 0 || categoryObj.RCatg_ID == null)  && errorMessage != '' ? 'border border-danger':''"  [(ngModel)]="categoryObj.RCatg_ID"  placeholder="Select Root Category"  id="RCatg_ID"  [ngModelOptions]="{standalone: true}">
+            <ng-option *ngFor="let scat of CategoryList" [value]="scat.id"> {{scat.name}}</ng-option>
+          </ng-select>
+        </div>
+
+        <label class="col-sm-2 col-form-label">Department<span class="warningclass">*</span></label>
+        <div class="col-sm-4">
+          <ng-select [ngClass] ="(categoryObj.SelectedDepartment == 0 || categoryObj.SelectedDepartment == null)  && errorMessage != '' ? 'border border-danger':''"
+                [multiple]="true"
+                [items]="DepartmentList"
+                [(ngModel)]="categoryObj.SelectedDepartment"
+                name="licenseAuthorityId"
+                bindValue="id"
+                bindLabel="name"
+                placeholder="Select Department">
+                </ng-select>
+        </div>
+
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Category Name<span class="warningclass">*</span></label>
+        <div class="col-sm-4">
+          <input class="form-control"  [ngClass] ="categoryObj.Catg_Name == '' && errorMessage != '' ? 'alert-danger':''" type="text" [(ngModel)]="categoryObj.Catg_Name" id="Catg_Name" [ngModelOptions]="{standalone: true}">
+        </div>
+
+        <label class="col-sm-2 col-form-label">Category Name (Danish)<span class="warningclass">*</span></label>
+        <div class="col-sm-4">
+          <input class="form-control" type="text" [ngClass] ="categoryObj.Catg_Name_D == '' && errorMessage != '' ? 'alert-danger':''" [(ngModel)]="categoryObj.Catg_Name_D" id="Catg_Name_D" [ngModelOptions]="{standalone: true}" >
+        </div>
+      </div>
+
+      <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Display Seq No<span class="warningclass">*</span></label>
+        <div class="col-sm-4">
+          <input class="form-control" type="number"  [ngClass] ="(categoryObj.Display_Seq_No == 0 || categoryObj.Display_Seq_No == null) && errorMessage != '' ? 'alert-danger':''"[(ngModel)]="categoryObj.Display_Seq_No" id="Display_Seq_No" [ngModelOptions]="{standalone: true}" min="0">
+        </div>
+
+        <label class="col-sm-2 col-form-label">Status</label>
+        <div class="col-sm-4">
+          <select class="form-control" [(ngModel)]="categoryObj.Status" id="Status"
+            [attr.disabled]="isInserted == 'I' ? 'disabled' : null" [ngModelOptions]="{standalone: true}">
+            <option *ngFor="let st of StatusList; let i = index" [value]="st.id" >
+              {{st.name}}
+            </option>
+          </select>
+        </div>
+      </div>
+    </div>
+    <br />
+    <hr />
+    <div class="text-center">
+      <div class="form-group align-center">
+        <button type="submit" class="btn btn-success fa fa-check-square-o cursor-pointer" (click)="saveCategory()"> <span class="font-d">
+            Save</span></button> &nbsp;
+        <button class="btn btn-danger fa fa-remove cursor-pointer" (click)="cancel()"><span class="font-d">
+            Cancel</span></button>
+      </div>
+    </div>
+
+  </form>
+</div>
+
+<!-- *********************************************** Data List **********************************************  -->
 <div class="row">
   <div class="col-sm-12">
       <app-card [title]="'Category Master'" [classHeader]="true" [blockClass]="'table-border-style'">
         <div class="table-responsive">
             <p>
               <!-- <a class="btn btn-success float-right" [routerLink]="['/add-edit-item']">Add New</a>   -->
-              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="openInsertPage()"><span class="font-d"> Add New</span></a>
+              <a class="btn btn-success float-right text-white m-b-10 m-r-20 fa fa-plus-circle cursor-pointer" (click)="addEditOpen(0)"><span class="font-d"> Add New</span></a>
             </p>
               <br/>
               <br/>
@@ -26,6 +98,7 @@
                   <th pSortableColumn="Catg_Name">Category Name <p-sortIcon field="Catg_Name"></p-sortIcon></th>
                   <th pSortableColumn="Catg_Name_D">Category Name (Danish) <p-sortIcon field="Catg_Name_D"></p-sortIcon></th>
                   <th pSortableColumn="RCatg_Name">Root Category Name <p-sortIcon field="RCatg_Name"></p-sortIcon></th>
+                  <th pSortableColumn="Department">Department <p-sortIcon field="Department"></p-sortIcon></th>
                   <th pSortableColumn="StatusDesc">Status <p-sortIcon field="StatusDesc"></p-sortIcon></th>
                   <th pSortableColumn="Deleted">IsDeleted <p-sortIcon field="Deleted"></p-sortIcon></th>
                   <th >Action </th>
@@ -34,11 +107,11 @@
                   <th>
                   <input pInputText type="text" (input)="dt.filter($event.target.value, 'Catg_Name', 'startsWith')" placeholder="Search by Category" class="form-control">
                   </th>
-                <th></th>
+                  <th></th>
                   <th>
                       <input pInputText type="text" (input)="dt.filter($event.target.value, 'RCatg_Name', 'contains')" placeholder="Search by Root" class="form-control">
                   </th>
-
+                  <th></th>
                   <th></th>
                   <th></th>
                   <th></th>
@@ -47,7 +120,7 @@
               </ng-template>
 
               <ng-template pTemplate="body" let-item>
-              <tr class="">  <!-- p-selectable-row  -->
+              <tr class="">  <!-- p-selyectable-row  -->
 
                   <td>
                         {{item.Catg_Name}}
@@ -57,7 +130,10 @@
                   </td>
                   <td>
                     {{item.RCatg_Name}}
-              </td>
+                  </td>
+                  <td>
+                    {{item.Department}}
+                  </td>
                   <td>
                         {{item.StatusDesc}}
                   </td>
@@ -65,7 +141,7 @@
                     {{item.Deleted}} <span *ngIf="item.Deleted =='Yes'"><button type="button" class="float-right btn btn-success text-white " (click) = "activateItem(item.Catg_ID)">Make Active</button> </span>
                   </td>
                   <td>
-                          <a class="ti-pencil-alt edit" (click)="openEditPage(item.Catg_ID)"></a>
+                          <a class="ti-pencil-alt edit" (click)="addEditOpen(item.Catg_ID)"></a>
                           &nbsp;<a class=" ti-trash delete" (click)="deleteItem(item.Catg_ID)"></a>
                              <!-- &nbsp;<a class=" ti-eye view" (click)="deleteItem(item.Item_ID)"></a> -->
                   </td>
